--- a/index.html
+++ b/index.html
@@ -9,15 +9,21 @@
         <div id="header">
             <h1>Илья Ножкин</h1>
             <h3>Программист</h3>
-            <p><a href="mailto:i.nozhkin@gmail.com">i.nozhkin@gmail.com</a>, <a href="http://artlinx.ru">artlinx.ru</a></p>
+            <p><a href="mailto:i.nozhkin@gmail.com">i.nozhkin@gmail.com</a></p>
         </div>
         <div id="main">
             <p>Я закончил магистратуру УлГТУ по специальности "Информационное и программное обеспечение автоматизированных систем" в 2018 году.</p>
-            <h2>Опыт работы</h2>
-            <ul>
-            <li>Ульяновский государственный университет<br>"Лечебное дело"</li>
-            <li>Ульяновский государственный технический университет<br>"Информатика и вычислительная техника"</li>
-            </ul>
+            <div class="main_section">
+                <h2>Образование</h2>
+                <div class="main_section_item">
+                    <h3>Ульяновский государственный университет</h3>
+                    <p>врач по специальности &lt;Лечевное дело&lt;, <i>2002 —  2008</i></p>
+                </div>
+                <div class="main_section_item">
+                    <h3>Ульяновский государственный технический университет</h3>
+                        <p>магистратура по специальности &lt;Информационное и программное обеспечение автоматизированных систем&lt;, <i>2015 — 2018</i></p>
+                </div>
+            </div>
             <h2>Образование</h2>
             <ul>
             <li>Ульяновский государственный университет<br>"Лечебное дело"</li>
@@ -25,14 +31,14 @@
             </ul>
             <h2>Другие навыки и увлечения</h2>
             <ul>
-            <li>Плавание, бильярд и большой теннис</li>
-            <li>Сердечно-легочная реанимация</li>
-            <li>Тотальная внутривенная анестезия</li>
+            <li>Плавание, бильярд, большой теннис</li>
+            <li>Исторические романы и фэнтези</li>
+            <li>Сердечно-легочная реамимация</li>
             </ul>
         </div>
         <div id="footer">
             <p>Илья Ножкин</p>
-            <p>г. Ульяновск, ул. Мира, 17А +7 9510 90 69 96, <a href="mailto:i.nozhkin@gmail.com">i.nozhkin@gmail.com</a></p>
+            <p>+7 (951) 090 69 96, <a href="mailto:i.nozhkin@gmail.com">i.nozhkin@gmail.com</a></p>
         </div>
     </body>
 </html>
