--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                         <p>магистратура по специальности &lt;Информационное и программное обеспечение автоматизированных систем&lt;, <i>2015 — 2018</i></p>
                 </div>
             </div>
-            <h2>Образование</h2>
+            <!--<h2>Образование</h2>
             <ul>
             <li>Ульяновский государственный университет<br>"Лечебное дело"</li>
             <li>Ульяновский государственный технический университет<br>"Информатика и вычислительная техника"</li>
@@ -34,7 +34,7 @@
             <li>Плавание, бильярд, большой теннис</li>
             <li>Исторические романы и фэнтези</li>
             <li>Сердечно-легочная реамимация</li>
-            </ul>
+            </ul>-->
         </div>
         <div id="footer">
             <p>Илья Ножкин</p>
