--- a/index.html
+++ b/index.html
@@ -24,17 +24,17 @@
                         <p>магистратура по специальности &lt;Информационное и программное обеспечение автоматизированных систем&lt;, <i>2015 — 2018</i></p>
                 </div>
             </div>
-            <!--<h2>Образование</h2>
-            <ul>
-            <li>Ульяновский государственный университет<br>"Лечебное дело"</li>
-            <li>Ульяновский государственный технический университет<br>"Информатика и вычислительная техника"</li>
-            </ul>
+            <h2>Образование</h2>
+                <h3>Ульяновский государственный университет</h3>
+                <p>врач по специальности "Лечевное дело", <i>2002 —  2008</i></p>
+                <h3>Ульяновский государственный технический университет</h3>
+                <p>магистратура по специальности "Информационное и программное обеспечение автоматизированных систем", <i>2015 — 2018</i></p>
             <h2>Другие навыки и увлечения</h2>
-            <ul>
-            <li>Плавание, бильярд, большой теннис</li>
-            <li>Исторические романы и фэнтези</li>
-            <li>Сердечно-легочная реамимация</li>
-            </ul>-->
+                <ul>
+                    <li>Плавание, бильярд, большой теннис</li>
+                    <li>Исторические романы и фэнтези</li>
+                    <li>Сердечно-легочная реамимация</li>
+                </ul>
         </div>
         <div id="footer">
             <p>Илья Ножкин</p>
