--- a/index.html
+++ b/index.html
@@ -12,18 +12,48 @@
             <p><a href="mailto:i.nozhkin@gmail.com">i.nozhkin@gmail.com</a></p>
         </div>
         <div id="main">
-            <p>Я закончил магистратуру УлГТУ по специальности "Информационное и программное обеспечение автоматизированных систем" в 2018 году.</p>
-            <h2>Образование</h2>
-                <h3>Ульяновский государственный университет</h3>
-                <p>врач по специальности "Лечевное дело", <i>2002 —  2008</i></p>
-                <h3>Ульяновский государственный технический университет</h3>
-                <p>магистратура по специальности "Информационное и программное обеспечение автоматизированных систем", <i>2015 — 2018</i></p>
-            <h2>Другие навыки и увлечения</h2>
-                <ul>
-                    <li>Плавание, бильярд, большой теннис</li>
-                    <li>Исторические романы и фэнтези</li>
-                    <li>Сердечно-легочная реамимация</li>
-                </ul>
+            <p>Решив кардинально поменять сферу деятельности, в 2018 году я закончил магистратуру по специальности «Информационное и программное обеспечение автоматизированных систем», защитив диссертацию на тему «Медицинская экспертная система для применения стандартов специализированной медицинской помощи».</p>
+            <div class="main_section">
+                <h2>Опыт работы</h2>
+                <div class="main_section_item">
+                    <h3>ООО «Финансово-проектная компания»</h3>
+                    <p>Инженер-программист, <i>2005 —  2010</i></p>
+                    <ul>
+                        <li>Системное администрирование</li>
+                        <li>Прикладное программирование</li>
+                    </ul>
+                </div>
+                <div class="main_section_item">
+                    <h3>АО «Регистраторское общество «СТАТУС»</h3>
+                    <p>Инженер-программист, <i>2015 — 2018 гг.</i></p>
+                    <ul>
+                        <li>Системное администрирование</li>
+                        <li>Прикладное программирование</li>
+                        <li>Веб-дизайн</li>
+                    </ul>
+                </div>
+            </div>
+            <div class="main_section">
+                <h2>Образование</h2>
+                <div class="main_section_item">
+                    <h3>Ульяновский государственный университет</h3>
+                    <p>Врач по специальности «Лечевное дело», <i>2002 —  2008</i></p>
+                </div>
+                <div class="main_section_item">
+                    <h3>Ульяновский государственный технический университет</h3>
+                    <p>Магистратура по специальности «Информационное и программное обеспечение автоматизированных систем», <i>2015 — 2018 гг.</i></p>
+                </div>
+            </div>
+            <div class="main_section">
+                <h2>Другие навыки и увлечения</h2>
+                <div class="main_section_item">
+                    <ul>
+                        <li>Плавание, бильярд, большой теннис</li>
+                        <li>Исторические романы и фэнтези</li>
+                        <li>Сердечно-легочная реамимация</li>
+                    </ul>
+                </div>
+            </div>
         </div>
         <div id="footer">
             <p>Илья Ножкин</p>
