--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                 <h2>Опыт работы</h2>
                 <div class="main_section_item">
                     <h3>ООО «Финансово-проектная компания»</h3>
-                    <p>Инженер-программист, <i>2005 —  2010</i></p>
+                    <p>инженер-программист, <i>2005 —  2010</i></p>
                     <ul>
                         <li>Системное администрирование</li>
                         <li>Прикладное программирование</li>
@@ -25,7 +25,7 @@
                 </div>
                 <div class="main_section_item">
                     <h3>АО «Регистраторское общество «СТАТУС»</h3>
-                    <p>Инженер-программист, <i>2015 — 2018 гг.</i></p>
+                    <p>инженер-программист, <i>2015 — 2018 гг.</i></p>
                     <ul>
                         <li>Системное администрирование</li>
                         <li>Прикладное программирование</li>
@@ -37,11 +37,11 @@
                 <h2>Образование</h2>
                 <div class="main_section_item">
                     <h3>Ульяновский государственный университет</h3>
-                    <p>Врач по специальности «Лечевное дело», <i>2002 —  2008</i></p>
+                    <p>врач по специальности «Лечевное дело», <i>2002 —  2008</i></p>
                 </div>
                 <div class="main_section_item">
                     <h3>Ульяновский государственный технический университет</h3>
-                    <p>Магистратура по специальности «Информационное и программное обеспечение автоматизированных систем», <i>2015 — 2018 гг.</i></p>
+                    <p>магистратура по специальности «Информационное и программное обеспечение автоматизированных систем», <i>2015 — 2018 гг.</i></p>
                 </div>
             </div>
             <div class="main_section">
