--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                 <h2>Образование</h2>
                 <div class="main_section_item">
                     <h3>Ульяновский государственный университет</h3>
-                    <p>врач по специальности «Лечевное дело», <i>2002 —  2008</i></p>
+                    <p>врач по специальности «Лечебное дело», <i>2002 —  2008</i></p>
                 </div>
                 <div class="main_section_item">
                     <h3>Ульяновский государственный технический университет</h3>
