--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                     <ul>
                         <li>Плавание, бильярд, большой теннис</li>
                         <li>Исторические романы и фэнтези</li>
-                        <li>Сердечно-легочная реамимация</li>
+                        <li>Сердечно-легочная реанимация</li>
                     </ul>
                 </div>
             </div>
