--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <body>
         <div id="header">
             <h1>Илья Ножкин</h1>
-            <h3>Программист</h3>
+            <h3>Разработчик</h3>
             <p><a href="mailto:i.nozhkin@gmail.com">i.nozhkin@gmail.com</a></p>
         </div>
         <div id="main">
@@ -37,7 +37,7 @@
                 <h2>Образование</h2>
                 <div class="main_section_item">
                     <h3>Ульяновский государственный университет</h3>
-                    <p>врач по специальности «Лечебное дело», <i>2002 —  2008</i></p>
+                    <p><i>2002 —  2008</i></p>
                 </div>
                 <div class="main_section_item">
                     <h3>Ульяновский государственный технический университет</h3>
@@ -48,9 +48,8 @@
                 <h2>Другие навыки и увлечения</h2>
                 <div class="main_section_item">
                     <ul>
-                        <li>Плавание, бильярд, большой теннис</li>
+                        <li>Плавание, бильярд, теннис</li>
                         <li>Исторические романы и фэнтези</li>
-                        <li>Сердечно-легочная реанимация</li>
                     </ul>
                 </div>
             </div>
