--- a/index.html
+++ b/index.html
@@ -20,16 +20,14 @@
                     <p>инженер-программист, <i>2005 —  2010</i></p>
                     <ul>
                         <li>Системное администрирование</li>
-                        <li>Прикладное программирование</li>
                     </ul>
                 </div>
                 <div class="main_section_item">
                     <h3>АО «Регистраторское общество «СТАТУС»</h3>
-                    <p>инженер-программист, <i>2015 — 2018 гг.</i></p>
+                    <p>инженер-программист, <i>2015 — 2019 гг.</i></p>
                     <ul>
                         <li>Системное администрирование</li>
-                        <li>Прикладное программирование</li>
-                        <li>Веб-дизайн</li>
+                        <li>Разработка программного обеспечения</li>
                     </ul>
                 </div>
             </div>
